# multiml

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: multiml.yaml
examples/: run_iris_classification.py
multiml/: __init__.py  const.py  hyperparameter.py  logger.py  saver.py  storegate.py  task_scheduler.py
multiml/agent/: __init__.py  agent.py  metric.py
multiml/agent/basic/: __init__.py  base.py  connection_grid_search.py  connection_random_search.py  grid_search.py  random_search.py  sequential.py
multiml/agent/keras/: __init__.py  callback.py  keras_connection_grid_search.py  keras_connection_random_search.py  keras_darts.py  keras_ensemble.py
multiml/agent/pytorch/: __init__.py  pytorch_asngnas.py  pytorch_connection_grid_search.py  pytorch_connection_random_search.py  pytorch_sposnas.py  pytorch_yoto_connection.py
multiml/data/: data_util.py
multiml/database/: __init__.py  database.py  hybrid_database.py  numpy_database.py  utils.py  zarr_database.py
multiml/task/: __init__.py  task.py
multiml/task/basic/: __init__.py  base.py  ml_base.py  ml_env.py  ml_model_connection.py  sklean_pipeline.py
multiml/task/keras/: __init__.py  keras_base.py  keras_conv2d.py  keras_darts.py  keras_ensemble.py  keras_mlp.py  keras_model_connection.py  keras_util.py
multiml/task/pytorch/: __init__.py  pytorch_asngnas_task.py  pytorch_asngnas_task_block.py  pytorch_base.py  pytorch_choice_block.py  pytorch_classification.py  pytorch_ddp.py  pytorch_metrics.py  pytorch_model_connection.py  pytorch_util.py  pytorch_yoto_connection_task.py
sphinx/: conf.py  how_to_build_multiai-doc.md  index.rst  mltask.rst  modules.rst  storegate.rst
tests/: test_agent.py  test_pytorch.py  test_saver.py  test_storegate.py  test_task.py
(+53 files in other folders)
