[tool.poetry]
name = "multiml"
version = "0.7.12"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.19.5"
tensorflow = ">=2.4.0"
zarr = "^2.8.3"
sklearn = "^0.0"
networkx = "^2.5.1"
yapf = "^0.31.0"
tqdm = "^4.61.0"




[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



