[metadata]
name = multiml
version = 1.0.0
license_file = LICENSE

[options]
packages = find:
install_requires =
    numpy>=1.18.5
    zarr==2.12.0
    sklearn==0.0
    networkx==2.4
    yapf==0.30.0

[options.extras_require]
tensorflow23 =
    tensorflow==2.3.0
    numpy==1.18.5
tensorflow =
    tensorflow==2.4.0
    numpy==1.19.5
pytorch =
    torch==1.9.1
    tqdm==4.48.2

[yapf]
based_on_style = pep8
COLUMN_LIMIT = 99

[aliases]
test=pytest

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts =
    --cov=multiml
filterwarnings =
    ignore:the imp module is deprecated:DeprecationWarning
